fixed card view on firefox

--- a/src/components/content/weather/cardlist/card/Card.css
+++ b/src/components/content/weather/cardlist/card/Card.css
@@ -9,7 +9,6 @@
 .card-image {
   padding-top: 1em;
   width: 100%;
-  height: 100%;
 }
 
 @media (max-width: 600px) {
